--- a/Hypergram/task/src/style.css
+++ b/Hypergram/task/src/style.css
@@ -1,12 +1,17 @@
 main {
     display: flex;
+    height: 90vh;
 }
 
 #canvas {
-    width: 75%;
+    flex-grow: 4;
 }
 
 #controls {
-    background-color: aqua;
+    display: flex;
+    flex-grow: 1;
+    flex-direction: column;
+    justify-content: center;
+    background-color: lightsteelblue;
 
 }
