Fix: some styles

--- a/Hypergram/task/src/style.css
+++ b/Hypergram/task/src/style.css
@@ -11,7 +11,8 @@ main {
     display: flex;
     flex-grow: 1;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-around;
+    align-items: center;
     background-color: lightsteelblue;
 
 }
