--- a/Hypergram/task/src/style.css
+++ b/Hypergram/task/src/style.css
@@ -11,7 +11,7 @@ main {
     display: flex;
     flex-grow: 1;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: space-evenly;
     align-items: center;
     background-color: lightsteelblue;
 
