--- a/Hypergram/task/src/style.css
+++ b/Hypergram/task/src/style.css
@@ -14,5 +14,6 @@ main {
     justify-content: space-evenly;
     align-items: center;
     background-color: lightsteelblue;
-
+    padding-top: 5%;
+    padding-bottom: 5%;
 }
