--- a/Hypergram/task/src/style.css
+++ b/Hypergram/task/src/style.css
@@ -17,3 +17,9 @@ main {
     padding-top: 5%;
     padding-bottom: 5%;
 }
+
+.controls {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
