--- a/Hypergram/task/src/style.css
+++ b/Hypergram/task/src/style.css
@@ -23,3 +23,21 @@ main {
     flex-direction: column;
     align-items: center;
 }
+input[type='file'] {
+    width:400px;
+    height:25px;
+    opacity:0
+}
+
+#button {
+    cursor: pointer;
+    /*display: block;*/
+    width: 90px;
+    background-color: purple;
+    height:25px;
+    color: white;
+    font-size: 11px;
+    line-height:25px;
+    text-align: center;
+}
+
